<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>620</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>800</width>
    <height>620</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>800</width>
    <height>620</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QPushButton" name="disconnectBtn">
    <property name="geometry">
     <rect>
      <x>710</x>
      <y>580</y>
      <width>75</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>断开</string>
    </property>
   </widget>
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>801</width>
      <height>561</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <property name="spacing">
      <number>2</number>
     </property>
     <item row="0" column="0">
      <widget class="VideoWidget" name="video_1" native="true">
       <property name="enabled">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="VideoWidget" name="video_3" native="true"/>
     </item>
     <item row="1" column="1">
      <widget class="VideoWidget" name="video_4" native="true"/>
     </item>
     <item row="0" column="1">
      <widget class="VideoWidget" name="video_2" native="true"/>
     </item>
    </layout>
   </widget>
   <widget class="QComboBox" name="videocomboBox">
    <property name="geometry">
     <rect>
      <x>85</x>
      <y>581</y>
      <width>231</width>
      <height>30</height>
     </rect>
    </property>
   </widget>
   <widget class="QComboBox" name="audiocomboBox">
    <property name="geometry">
     <rect>
      <x>420</x>
      <y>581</y>
      <width>231</width>
      <height>30</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>31</x>
      <y>581</y>
      <width>48</width>
      <height>30</height>
     </rect>
    </property>
    <property name="text">
     <string>视频质量</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
      <x>360</x>
      <y>580</y>
      <width>48</width>
      <height>30</height>
     </rect>
    </property>
    <property name="text">
     <string>音频质量</string>
    </property>
   </widget>
  </widget>
 </widget>
 <customwidgets>
  <customwidget>
   <class>VideoWidget</class>
   <extends>QWidget</extends>
   <header location="global">videowidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
